# Reverie-Chess

./: .gitignore  CMakeLists.txt  main.cpp
.VSCodeCounter/2024-01-20_18-29-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
SFML/include/SFML/System/: Vector2.hpp  Vector2.inl
src/Assets/Shaders/: Palettizer.frag
src/Chess/Board/: Board.cpp  Board.hpp  GridofTiles.hpp  Tile.hpp
src/Chess/Move/: Move.cpp  Move.hpp
src/Chess/Piece/: Behaviour.hpp  Information.hpp  Pieces.cpp  Pieces.hpp
src/Game/: App.cpp  App.hpp  MessageQueues.cpp
src/General/: Constants.hpp  Utilities.cpp  Utilities.hpp  Utilities.tpp
src/Resources/: EventList.cpp  EventList.hpp  ResourcePackage.hpp  ScreenConductor.cpp  ScreenConductor.hpp  Settings.hpp  SoundPlayer.cpp  SoundPlayer.hpp  SpriteManager.cpp  SpriteManager.hpp
src/UI/: Element.hpp  Element.tpp  ElementBuilders.cpp  ElementBuilders.hpp  ElementBuilders.tpp  Interface.hpp  Screen.cpp  Screen.hpp  State.hpp
src/UI/CustomElement/: Label.hpp
src/UI/CustomElement/Gameboard/: BoardComponent.hpp  BoardElement.cpp  BoardElement.hpp
src/UI/CustomElement/ScrollablePage/: PageComponent.hpp  ScrollingPageElement.cpp  ScrollingPageElement.hpp
src/UI/CustomElement/Slider/: SliderComponent.hpp  SliderElement.cpp  SliderElement.hpp
src/UI/CustomSprite/: MemSprite.cpp  MemSprite.hpp
src/UI/Screens/: HomeScreen.cpp  HomeScreen2.cpp  LevelScreen.cpp  ScreensImpl.hpp  SettingsScreen.cpp  TeamSelectScreen.cpp
tests/: MainTesting.cpp
